Fix spacing below details element

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -28,6 +28,7 @@
   border-block-end: 1px solid var(--theme-color-content);
   interpolate-size: allow-keywords;
   margin-block: .5rem;
+  margin-bottom: 2rem;
   padding-block: .5rem;
 }
 
